--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,10 @@
 DB_CLIENT=mysql2
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=3300
 DB_DATABASE=life_skill_education_center
 DB_USERNAME=root
 DB_PASSWORD=
+NODE_ENV=development
 
 JWT_ACCESS_KEY=123
 JWT_REFRESH_KEY=789
